[package]
name = "chainmail"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2"
serde = { version = "^1.0", default-features = false, features=["derive"], optional = true }
serde_bytes = { version = "^0.11", optional = true }

[features]
default = ["serde_support"]
serde_support = ["serde", "serde_bytes"]
